# c-login

./: .gitignore  .idea  BUILD  CMakeLists.txt  Makefile  README.md  WORKSPACE  base  bazel-bin  bazel-c_login  bazel-out  bazel-testlogs  c_login  client  config  model  protos  repository  resource  service  utils
base/: Database.cpp  Database.h  Redis.cpp  Redis.h
bazel/: BUILD
client/: Client.cpp
config/: AppConfig.cpp  AppConfig.h  DbConfig.cpp  DbConfig.h
grpc/: LoginGrpcServiceImpl.cc  LoginGrpcServiceImpl.h
libs/cipher/: aes.cpp  aes.h  aes_encryptor.cpp  aes_encryptor.h  md5.cc  md5.h  sha256.cc  sha256.h
libs/lib/: libgrpc.dylib  libhiredis.dylib  libmariadb.dylib  libprotobuf.dylib  libprotoc.dylib
libs/mysql/: mysql_version.h
main/: Main.cpp  Main.h
model/: Result.cpp  Result.h  User.cpp  User.h
protos/: login.grpc.pb.cc  login.grpc.pb.h  login.pb.cc  login.pb.h  login.proto
repository/: UserRepository.cpp  UserRepository.h
resource/: config.json
service/: LoginService.cpp  LoginService.h
test/: Main.cpp  Main.h
utils/: Common.cpp  Common.h  Database.cpp  Database.h
